# VexEngine

./: .gitignore  CMakeLists.txt  CreateAssetsLink.bat  GenerateSolution_VS19.bat  GenerateSolution_VS22.bat  README.md
Assets/: spheresRoughness.glb  sponza.mtl
Assets/dumbbells/: license.txt  scene.gltf
Assets/fridge/: scene.gltf
Assets/scene1/: license.txt  scene.gltf
Assets/sphere/: sphere.glb
Assets/sponzaex/: scene.gltf
Source/: CMakeLists.txt
Source/Cooker/: CMakeLists.txt
Source/Cooker/Source/: CookerMesh.cpp  CookerMesh.h  MeshHeaders.h  TextureCooker.h  main.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Core/: ApplicationBase.h
Source/Engine/Windows/: DisplayManager.cpp  DisplayManager.h  WinApp64.cpp  WinApp64.h
Source/Renderer/: CMakeLists.txt  VexRenderer.h
Source/Renderer/API/Allocation/: VexLevelAllocator.h
Source/Renderer/API/Camera/: CameraBase.h  CameraManager.cpp  CameraManager.h  FPSCamera.cpp  FPSCamera.h  ShadowCamera.cpp  ShadowCamera.h
Source/Renderer/API/D3D12/: DX12BarrierManager.cpp  DX12BarrierManager.h  DX12ConstantBuffer.cpp  DX12ConstantBuffer.h  DX12Device.cpp  DX12Device.h  DX12IndexedVertexBuffer.cpp  DX12IndexedVertexBuffer.h  DX12RenderContext.cpp  DX12RenderContext.h  DX12RenderTarget.cpp  DX12RenderTarget.h  DX12Renderer.cpp  DX12Renderer.h  DX12Resource.cpp  DX12Resource.h  DX12Shader.cpp  DX12Shader.h  DX12Swapchain.cpp  DX12Swapchain.h  DX12Texture.h
Source/Renderer/API/D3D12/Allocator/: D3D12MemAlloc.h  DX12DescriptorHeap.cpp  DX12DescriptorHeap.h
Source/Renderer/API/D3D12/ShaderCompiler/: DX12ShaderCompiler.cpp  DX12ShaderCompiler.h  DX12ShaderLibrary.cpp  DX12ShaderLibrary.h
Source/Renderer/API/Light/: DirectionalLight.cpp  DirectionalLight.h  LightManager.h
Source/Renderer/API/Meshes/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshCollection.cpp  MeshCollection.h  Skybox.cpp  Skybox.h  StaticMesh.h
Source/Renderer/API/RenderComponents/: RenderComponentBase.h  StaticMeshRenderComponent.h
Source/Renderer/API/RenderPass/: RenderPassBase.h  RenderPassCubemapDraw.cpp  RenderPassGenIrradiance.cpp  RenderPassOpaque.cpp  RenderPassShadowMap.cpp  RenderPasses.cpp  RenderPasses.h
Source/Renderer/API/Textures/: 2DTexture.cpp  2DTexture.h  3DTexture.h
Source/Renderer/Common/: VexRenderCommon.h  VexRenderGlobalConfig.h
Source/Renderer/Shaders/2D/: 2d_ps_color.cso  2d_ps_color.hlsl  2d_vs_color.cso  2d_vs_color.hlsl  compileShaders.bat  vs_depth_pass.cso  vs_depth_pass.hlsl
Source/Renderer/Shaders/PBR/: ps_gen_irradiance.hlsl  vs_gen_irradiance.hlsl
Source/Renderer/Shaders/Skybox/: compileShaders.bat  ps_skybox_draw.cso  ps_skybox_draw.hlsl  vs_skybox_draw.cso  vs_skybox_draw.hlsl
Source/Sandbox/: CMakeLists.txt  test.cpp
Source/Sandbox/Apps/: SandboxApp.cpp  SandboxApp.h
