#LINK_DIRECTORIES(${RENDER_OUTPUT_DIR})
INCLUDE_DIRECTORIES(${TP_D3DX12_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TP_DXC_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${RENDER_SRC_DIR})
INCLUDE_DIRECTORIES(${TP_DIRECTXTEX_INCLUDE_DIR})

# Files for static library build
file(GLOB_RECURSE SourceFiless
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

#define output (static lib)
add_library(${ENGINE_LIBRARY_NAME} STATIC ${SourceFiless})
target_compile_features(${ENGINE_LIBRARY_NAME} PRIVATE cxx_std_20)

target_compile_definitions(${ENGINE_LIBRARY_NAME} PRIVATE
    $<$<CONFIG:DebugCooker>:VEX_COOKER=1>
    $<$<CONFIG:ReleaseCooker>:VEX_COOKER=1>
)

# C++/Compiler setting
set_property(TARGET ${ENGINE_LIBRARY_NAME} PROPERTY CXX_STANDARD 20)
set_property(TARGET ${ENGINE_LIBRARY_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SourceFiless})